# speaktolearn

./: .gitignore  CLAUDE.md  Makefile  README.md  commit_report.md  new_model.txt  scoring.md  tasks.txt
tools/mandarin_grader/: BENCHMARK_RESULTS.md  DATA_MANIFEST.md  SYLLABLE_STATS.md  pyproject.toml
tools/mandarin_grader/mandarin_grader/: __init__.py  contour.py  pitch.py  sandhi.py  scorer.py  types.py  vad.py
tools/mandarin_grader/mandarin_grader/align/: __init__.py  base.py  dtw.py  uniform.py
tools/mandarin_grader/mandarin_grader/data/: __init__.py  aishell_source.py  aishell_tar_source.py  audio.py  augmentation.py  autoregressive_dataset.py  data_source.py  dataloader.py  full_sentence_dataset.py  lexicon.py  synthesis.py  synthetic_source.py  tts_source.py
tools/mandarin_grader/mandarin_grader/features/: __init__.py  f0.py
tools/mandarin_grader/mandarin_grader/model/: __init__.py  syllable_predictor_v3.py  syllable_predictor_v4.py  syllable_predictor_v5.py  syllable_predictor_v6.py  syllable_predictor_v7.py  syllable_tone_model.py
tools/mandarin_grader/mandarin_grader/tone/: __init__.py  base.py  rules.py  templates.py
tools/mandarin_grader/scripts/: benchmark_tts.py  convert_aishell3_to_tar.py  deploy_to_flutter.py  download_aishell3.py  eval_single_sentence.py  eval_tts.py  export_onnx.py  export_onnx_v5.py  export_onnx_v6.py  export_onnx_v7.py  generate_mel_test_vectors.py  generate_samples.py  generate_syllable_lexicon.py  generate_syllable_lexicon_v2.py  generate_training_data.py  pull_recordings.py  pull_wav.py  split_audio.py  syllable_stats.py  test_augmentation_profile.py  test_onnx_inference.py  test_phone_recordings.py  test_pulled_recordings.py  test_pulled_recordings_v6.py  test_tts_audio.py  train.py  train_v3.py  train_v4.py  train_v5.py  train_v6.py  train_v7.py  validate_audio.py  validate_flutter_audio.py  voice_enhancement.py
tools/mandarin_grader/scripts/archive/: README.md  train.py
tools/mandarin_grader/tests/: __init__.py  conftest.py  test_aishell_tar_source.py  test_align.py  test_augmentation.py  test_contours.py  test_dataloader.py  test_lexicon.py  test_model.py  test_pitch_norm.py  test_sandhi.py  test_syllable_predictor_v5.py  test_syllable_predictor_v7.py  test_synthesis.py  test_tone.py  test_v7_integration.py
tools/mandarin_grader/tests/fixtures/: v7_test_vectors.json
tools/sentence_gen/: .env.example  pyproject.toml
tools/sentence_gen/sentence_gen/: __init__.py  cli.py  config.py
tools/sentence_gen/sentence_gen/generators/: __init__.py
tools/sentence_gen/tests/: __init__.py  test_audio_generator.py  test_models.py  test_schema_validation.py  test_text_generator.py
(+227 files in other folders)
